--- a/motion_switch_elevation.yaml
+++ b/motion_switch_elevation.yaml
@@ -1,7 +1,7 @@
 blueprint:
   name: Motion-activated Switch with Elevation
   domain: automation
-  source_url: https://gist.github.com/reinder83/8c5838c16af8f6ec3d7cb5258444b8b8
+  source_url: https://github.com/pepsonEL/HAblueprints/blob/main/motion_switch_elevation.yaml
   input:
     motion_entity:
       name: Motion Sensor
