--- a/motion_switch_elevation_and_check_state.yaml
+++ b/motion_switch_elevation_and_check_state.yaml
@@ -47,11 +47,11 @@ trigger:
   to: 'on'
 variables:
   below_elevation: !input 'below_elevation'
+#condition:
+#  - condition:
+#   '{{ state_attr(''sun.sun'',''elevation'') <= (below_elevation | float)}}'
 condition:
-  - condition:
-    '{{ state_attr(''sun.sun'',''elevation'') <= (below_elevation | float)}}'
-  - condition:
-    '{{ states[switch_target].state == 'off' }}'
+- '{{ states[switch_target].state == 'off' }}'
 action:
 - service: switch.turn_on
   target: !input 'switch_target'
