--- a/motion_switch_elevation_and_check_state.yaml
+++ b/motion_switch_elevation_and_check_state.yaml
@@ -48,8 +48,7 @@ trigger:
 variables:
   below_elevation: !input 'below_elevation'
 condition:
-  - condition: template
-    value_template: '{{ states[switch_target].state == 'off' }}'
+- '{{ states[switch_target].state == 'off' }}'
 action:
 - service: switch.turn_on
   target: !input 'switch_target'
