--- a/motion_switch_elevation_and_check_state.yaml
+++ b/motion_switch_elevation_and_check_state.yaml
@@ -1,7 +1,8 @@
+  
 blueprint:
-  name: Motion-activated Switch with Elevation and switch off
+  name: Motion-activated Switch with Elevation
   domain: automation
-  source_url: https://github.com/pepsonEL/HAblueprints/blob/main/motion_switch_elevation_and_check_state.yaml
+  source_url: https://github.com/pepsonEL/HAblueprints/blob/main/motion_switch_elevation.yaml
   input:
     motion_entity:
       name: Motion Sensor
@@ -49,9 +50,6 @@ variables:
   below_elevation: !input 'below_elevation'
 condition:
 - '{{ state_attr(''sun.sun'',''elevation'') <= (below_elevation | float)}}'
-- condition: state
-  entity_id: 'switch_target'
-  state: 'off'
 action:
 - service: switch.turn_on
   target: !input 'switch_target'
