--- a/motion_switch_elevation_and_state.yaml
+++ b/motion_switch_elevation_and_state.yaml
@@ -57,7 +57,9 @@ variables:
   blocker_entity: !input blocker_entity
 condition:
   - condition: template
-    value_template: '{{ state_attr(''sun.sun'',''elevation'') <= (below_elevation | float)}}'
+    value_template: >
+      '{{ state_attr(''sun.sun'',''elevation'') <= (below_elevation | float) and
+       (blocker_entity == none) or (states[blocker_entity].state == 'off') }}'
 action:
 - service: switch.turn_on
   target: !input 'switch_target'
