--- a/motion_switch_elevation_and_state.yaml
+++ b/motion_switch_elevation_and_state.yaml
@@ -58,7 +58,7 @@ condition:
   - condition: template
     value_template: >
       '{{ state_attr(''sun.sun'',''elevation'') <= (below_elevation | float) and
-       (blocker_entity == none) or (states[blocker_entity].state == 'off') }}'
+       (states[blocker_entity].state == 'off') }}'
 action:
 - service: switch.turn_on
   target: !input 'switch_target'
