--- a/motion_switch_elevation_and_state.yaml
+++ b/motion_switch_elevation_and_state.yaml
@@ -57,7 +57,10 @@ variables:
 condition:
   - condition: template
     value_template: >
-      '{{ state_attr(''sun.sun'',''elevation'') <= (below_elevation | float) and (states[blocker_entity].state == 'off') }}'
+      '{{ state_attr(''sun.sun'',''elevation'') <= (below_elevation | float) }}'
+  - condition: template
+    value_template: >
+      '{{ (states[blocker_entity].state == 'off') }}'
 action:
 - service: switch.turn_on
   target: !input 'switch_target'
