--- a/motion_switch_elevation_and_state.yaml
+++ b/motion_switch_elevation_and_state.yaml
@@ -1,7 +1,7 @@
 blueprint:
-  name: Motion-activated Switch with Elevation and state
+  name: Motion-activated Switch with Sun Elevation
   domain: automation
-  source_url: https://github.com/pepsonEL/HAblueprints/blob/main/motion_switch_elevation_and_state.yaml
+  source_url: https://gist.github.com/Menethoran/219aff4827ef561065d28e53742485b7
   input:
     motion_entity:
       name: Motion Sensor
@@ -15,9 +15,15 @@ blueprint:
         target:
           entity:
             domain: switch
+    switch_entity:
+      name: Switch with state OFF
+      description: Switch which must be off to run automation.
+      selector:
+        entity:
+          domain: switch
     no_motion_wait:
       name: Wait time
-      description: Time to wait until the switch should be turned off.
+      description: Time to wait until the light should be turned off.
       default: 120
       selector:
         number:
@@ -38,13 +44,6 @@ blueprint:
           unit_of_measurement: degrees
           step: 1.0
           mode: slider
-    blocker_entity:
-      name: (OPTIONAL) Blocking entity
-      description: Jeśli stan tej jednostki jest włączony, uniemożliwi to uruchomienie automatyzacji.
-      default:
-      selector:
-        entity:
-          domain: switch
 mode: restart
 max_exceeded: silent
 trigger:
@@ -55,12 +54,14 @@ trigger:
 variables:
   below_elevation: !input 'below_elevation'
 condition:
-  - condition: template
-    value_template: >
-      '{{ state_attr(''sun.sun'',''elevation'') <= (below_elevation | float) }}'
-  - condition: template
-    value_template: >
-      '{{ (states[blocker_entity].state == 'off') }}'
+  - condition: state
+    entity_id: !input 'switch_entity'
+    state: 'off'
+  - condition: and
+    condition: numeric_state
+    entity_id: sun.sun
+    attribute: elevation
+    below: !input 'below_elevation'
 action:
 - service: switch.turn_on
   target: !input 'switch_target'
